# scotty-webpack

./: Makefile  index.html  main.hs  rks.js  server.cabal  stack.yaml
clientside/: Main.js  index.jade  index.json
clientside/src/: Main.purs
serverside/: Main.hs  server.cabal
