name:          server
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18

executable server
    build-depends:    base
                    , aeson
                    , scotty>=0.11.0
                    , esqueleto
                    , hsyslog>=4
                    , mtl>=2
                    , bytestring
                    , text>=0.11.3.1
                    , monad-logger
                    , persistent
                    , persistent-template
                    , persistent-postgresql
                    , time>=1.5
    default-language: Haskell2010
    main-is:          Main.hs
